testdata/baselines/reference/submodule/conformance/nodeModulesCJSEmit1(module=nodenext).errors.txt
/5.cjs(1,8): error TS1192: Module '"/2"' has no default export.
/5.cjs(2,8): error TS1192: Module '"/3"' has no default export.


==== /1.cjs (0 errors) ====
    module.exports = {};
    
==== /2.cjs (0 errors) ====
    exports.foo = 0;
    
==== /3.cjs (0 errors) ====
    import "foo";
    exports.foo = {};
    
==== /4.cjs (0 errors) ====
    ;
    
==== /5.cjs (2 errors) ====
    import two from "./2.cjs";   // ok
           ~~~
!!! error TS1192: Module '"/2"' has no default export.
    import three from "./3.cjs"; // error
           ~~~~~
!!! error TS1192: Module '"/3"' has no default export.
    two.foo;
    three.foo;
    